k8s/gateway/service-new.yaml
apiVersion: v1
kind: Service
metadata:
  name: gke-demo-svc-v130
  namespace: default
spec:
  selector:
    app: gke-demo-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
