k8s/gateway/service-old.yaml
apiVersion: v1
kind: Service
metadata:
  name: gke-demo-svc-v129
  namespace: default
spec:
  selector:
    app: gke-demo-app
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
  type: ClusterIP
